{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Movement",
            "id": "f4ea73e9-b564-442d-8c58-a34021d9c794",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "4373601b-3c60-4a7c-9c87-3384120f43b2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "View",
                    "type": "PassThrough",
                    "id": "282259f1-bac4-470b-8ccc-64be6f0308d7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "df378e34-0519-4da0-a79b-ecf9a768298c",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "64c51156-c978-43b1-a658-abcf71e07de6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "21a73878-e0c4-41ca-846e-37f350b43e04",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "4838b7eb-a56e-4f20-a34b-62e09fb92081",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "32ce63e8-59ee-4f70-baee-3de6fdb04f08",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "07f0b0b1-bffd-4d74-9e87-e2a5c6b36e4b",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "View",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Actions",
            "id": "b6f2c198-4784-420e-b879-dd78fef0b756",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "98275636-4448-4ef2-b250-e060608cfaf2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "WalkingToggle",
                    "type": "Button",
                    "id": "3f4f9692-b5ea-43f9-8f4a-1803af17a82b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "898ea07e-c84f-4bef-b12f-42bb05d97687",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire1",
                    "type": "Button",
                    "id": "2e33d907-c01e-48b4-b508-fd44a090dbda",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Fire1Hold",
                    "type": "Button",
                    "id": "fef9a53b-aedb-44bc-a428-3cf019a1141f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Kick",
                    "type": "Button",
                    "id": "66c38dea-84f0-4dec-ab2f-563c16665346",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "1dde1ecd-3e1a-46b3-a746-67c75fbe836d",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bbf35569-d4ee-4f57-ad6a-e5040f5dc279",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "WalkingToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76ef2518-4a46-4579-9760-6afbcdceeed3",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a532f7ba-1a29-4fd5-881a-eb657b4519e1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "75809225-80b1-4520-8ef9-e40511d5d098",
                    "path": "<Keyboard>/z",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Fire1Hold",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87d5d8f9-d5af-4e01-a246-bda5dd1abaf0",
                    "path": "<Keyboard>/f",
                    "interactions": "Press(behavior=2)",
                    "processors": "",
                    "groups": "",
                    "action": "Kick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}